[package]
name = "passportotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.0", features = ["derive"] }
image = "0.24.9"
totp-rs = { version = "5.5.1", features = ["gen_secret", "otpauth", "qr"] }
viuer = "0.7.1"
